[metadata]
name = Modalities
version = 1.0.0
description = This module defines the `Modality` enum class, which represents different types of modalities and provides functionality for adding new modalities dynamically.
author = Jack Geraghty (jmg049)
author_email = jgeraghty04@gmail.com
readme = README.md

[options]
packages = find:
install_requires =
    aenum>=3.1.7

[options.extras_require]
testing =
    pytest
